--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,26 @@
-/* You can add global styles to this file, and also import other style files */
+@import '~@angular/material/prebuilt-themes/indigo-pink.css';
+body {
+  font-family: Roboto, Arial, sans-serif;
+  margin: 0;
+}
+
+.content {
+  padding: 5px;
+}
+
+.version-info {
+  font-size: .8em;
+  float: right;
+}
+
+.toolbar-icon {
+  padding: 0 5px;
+}
+
+.toolbar-spacer {
+  flex: 1 1 auto;
+}
+
+.toolbar-item {
+  font-size: 1.25em;
+}
