--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,10 @@
 <mat-toolbar color="primary">
   <a mat-icon-button [routerLink] = "['/dashboard']" class="toolbar-item">
-    <mat-icon class="toolbar-icon">dashboard</mat-icon>{{ title }}
+    <mat-icon class="toolbar-icon">group_work</mat-icon>{{ title }}
   </a>
   <span class="toolbar-spacer"></span>
   <a mat-icon-button [routerLink] = "['/profile']" >
-    <mat-icon class="toolbar-icon" matTooltip="Profile">face</mat-icon>
+    <mat-icon class="toolbar-icon" matTooltip="Profile">person</mat-icon>
   </a>
 
 </mat-toolbar>
@@ -12,5 +12,4 @@
 
   <router-outlet></router-outlet>
 
-  <span class="version-info">Current build: {{version.full}}</span>
 </div>
