set up custom md theming

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar color="primary">
+<mat-toolbar color="primary" class="mat-elevation-z4">
   <a mat-icon-button [routerLink] = "['/dashboard']" class="toolbar-item">
     <mat-icon class="toolbar-icon">group_work</mat-icon>{{ title }}
   </a>
