--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,26 +1,25 @@
-@import '~@angular/material/prebuilt-themes/indigo-pink.css';
-body {
-  font-family: Roboto, Arial, sans-serif;
-  margin: 0;
-}
+@import '~@angular/material/theming';
+@include mat-core();
 
-.content {
-  padding: 5px;
-}
+$candy-app-primary: mat-palette($mat-blue-grey);
+$candy-app-accent:  mat-palette($mat-amber, A200, A100, A400);
 
-.version-info {
-  font-size: .8em;
-  float: right;
+$candy-app-warn: mat-palette($mat-red);
+
+$candy-app-theme: mat-light-theme($candy-app-primary, $candy-app-accent, $candy-app-warn);
+
+@include angular-material-theme($candy-app-theme);
+
+
+.toolbar-spacer {
+  flex: 1 1 auto;
 }
 
 .toolbar-icon {
   padding: 0 5px;
 }
 
-.toolbar-spacer {
-  flex: 1 1 auto;
-}
-
 .toolbar-item {
   font-size: 1.2em;
 }
+
