fixed and organized tests. more md style work.

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,4 +1,10 @@
-<app-pie-chart></app-pie-chart>
-<app-bar-chart></app-bar-chart>
+<mat-card class="chart-card">
+  <mat-card-header>Pie Chart Example</mat-card-header>
+  <app-pie-chart></app-pie-chart>
+</mat-card>
+
+<mat-card class="chart-card">
+  <app-bar-chart></app-bar-chart>
+</mat-card>
 
 
