--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,8 +1,15 @@
-@import '~@angular/material/theming';
-@include mat-core();
+@import "~@angular/material/_theming.scss";
 
-$candy-app-primary: mat-palette($mat-blue-grey);
-$candy-app-accent:  mat-palette($mat-amber, A200, A100, A400);
+$custom-typography: mat-typography-config(
+  $font-family: 'Hind, san-serif',
+  $headline: mat-typography-level(32px, 48px, 700),
+  $body-1: mat-typography-level(16px, 24px, 500)
+);
+
+@include mat-core($custom-typography);
+
+$candy-app-primary: mat-palette($mat-amber);
+$candy-app-accent:  mat-palette($mat-blue-grey, A200, A100, A400);
 
 $candy-app-warn: mat-palette($mat-red);
 
@@ -10,6 +17,10 @@ $candy-app-theme: mat-light-theme($candy-app-primary, $candy-app-accent, $candy-
 
 @include angular-material-theme($candy-app-theme);
 
+
+body {
+  margin: 0;
+}
 
 .toolbar-spacer {
   flex: 1 1 auto;
@@ -21,5 +32,12 @@ $candy-app-theme: mat-light-theme($candy-app-primary, $candy-app-accent, $candy-
 
 .toolbar-item {
   font-size: 1.2em;
+}
+
+.chart-card {
+  width: 500px;
+  height: 500px;
+  margin: 15px;
+  float: left;
 }
 
