--- a/src/styles.css
+++ b/src/styles.css
@@ -1,8 +1,8 @@
 /*
-Error: File to import not found or unreadable: ~@angular/material/_theming.scss.
+Error: File to import not found or unreadable: ~@angular/material/theming.
         on line 1 of styles.scss
 
-1: @import "~@angular/material/_theming.scss";
+1: @import "~@angular/material/theming";
 2: 
 3: $custom-typography: mat-typography-config(
 4:   $font-family: 'Hind, san-serif',
@@ -53,4 +53,4 @@ styles.scss:1
 body:before {
   white-space: pre;
   font-family: monospace;
-  content: "Error: File to import not found or unreadable: ~@angular/material/_theming.scss.\A         on line 1 of styles.scss\A \A 1: @import \"~@angular/material/_theming.scss\";\A 2: \A 3: $custom-typography: mat-typography-config(\A 4:   $font-family: 'Hind, san-serif',\A 5:   $headline: mat-typography-level(32px, 48px, 700),\A 6:   $body-1: mat-typography-level(16px, 24px, 500)"; }
+  content: "Error: File to import not found or unreadable: ~@angular/material/theming.\A         on line 1 of styles.scss\A \A 1: @import \"~@angular/material/theming\";\A 2: \A 3: $custom-typography: mat-typography-config(\A 4:   $font-family: 'Hind, san-serif',\A 5:   $headline: mat-typography-level(32px, 48px, 700),\A 6:   $body-1: mat-typography-level(16px, 24px, 500)"; }
