--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,27 +1,34 @@
 <div class="app-container" [class.app-is-mobile]="mobileQuery.matches" (window:resize)="onResize($event)">
+
+  <!-- app toolbar -->
   <mat-toolbar color="primary" class="mat-elevation-z4 app-toolbar" >
-    <button mat-icon-button (click)="snav.toggle()"><mat-icon>menu</mat-icon></button>
-    <a mat-icon-button [routerLink] = "['/dashboard']" class="toolbar-item">
-      <mat-icon class="toolbar-icon">group_work</mat-icon>{{ title }}
+    <a mat-icon-button [routerLink] = "['/dashboard']" class="app-toolbar-brand">
+      <mat-icon class="toolbar-icon">group_work</mat-icon><h1 class="app-name">{{ title }}</h1>
     </a>
-    <span class="toolbar-spacer"></span>
+    <button class="app-toolbar-item" mat-icon-button (click)="snav.toggle()"><mat-icon>menu</mat-icon></button>
+    <span class="app-toolbar-spacer"></span>
     <a mat-icon-button [routerLink] = "['/profile']" >
-    <mat-icon class="toolbar-icon" matTooltip="Profile">person</mat-icon>
+    <mat-icon class="app-toolbar toolbar-icon" matTooltip="Profile">person</mat-icon>
   </a>
   </mat-toolbar>
 
+  <!-- nav and content containers -->
   <mat-sidenav-container class="app-sidenav-container"
                          [style.marginTop.px]="mobileQuery.matches ? 56 : 0">
-    <mat-sidenav #snav [mode]="mobileQuery.matches ? 'over' : 'side'"
+    <!-- app side nav -->
+    <mat-sidenav class="app-sidenav" #snav [mode]="mobileQuery.matches ? 'over' : 'side'"
                  [fixedInViewport]="mobileQuery.matches" fixedTopGap="56">
-      <mat-nav-list>
+      <mat-nav-list class="app-sidenav">
         <a mat-list-item routerLink=".">nav 1</a>
         <a mat-list-item routerLink=".">nav 2</a>
         <a mat-list-item routerLink=".">nav 3</a>
       </mat-nav-list>
     </mat-sidenav>
+
+    <!-- main content wrapper -->
     <mat-sidenav-content>
       <router-outlet></router-outlet>
     </mat-sidenav-content>
+
   </mat-sidenav-container>
 </div>
