--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,9 +1,9 @@
-<mat-card class="chart-card">
+<mat-card class="dashboard-chart-card">
   <mat-card-header>Pie Chart Example</mat-card-header>
   <app-pie-chart></app-pie-chart>
 </mat-card>
 
-<mat-card class="chart-card">
+<mat-card class="dashboard-chart-card">
   <app-bar-chart></app-bar-chart>
 </mat-card>
 
