--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,5 @@
-@import "~@angular/material/theming";
+/* md custom theme */
+@import "../node_modules/@angular/material/theming";
 
 $custom-typography: mat-typography-config(
   $font-family: 'Hind, san-serif',
@@ -8,41 +9,27 @@ $custom-typography: mat-typography-config(
 
 @include mat-core($custom-typography);
 
-$candy-app-primary: mat-palette($mat-amber);
+$turkey-app-primary: mat-palette($mat-amber);
 
-$candy-app-accent:  mat-palette($mat-blue-grey, A200, A100, A400);
+$turkey-app-accent:  mat-palette($mat-blue-grey, A200, A100, A400);
 
-$candy-app-warn: mat-palette($mat-red);
+$turkey-app-warn: mat-palette($mat-red);
 
-$candy-app-theme: mat-light-theme($candy-app-primary, $candy-app-accent, $candy-app-warn);
+$turkey-app-theme: mat-light-theme($turkey-app-primary, $turkey-app-accent, $turkey-app-warn);
 
-@include angular-material-theme($candy-app-theme);
+@include angular-material-theme($turkey-app-theme);
 
-$nav-link-color: rgba(0,0,0,.64);
+/*additional app-wide classes */
+$toolbar-link-color: #333333;
+$nav-background: #333333;
+$nav-link-color: #dddddd;
+
 
 body {
   margin: 0;
 }
 
-.toolbar-spacer {
-  flex: 1 1 auto;
-}
-
-.toolbar-icon {
-  padding: 0px;
-}
-
-.toolbar-item {
-  font-size: 1.2em;
-}
-
-.chart-card {
-  width: 500px;
-  height: 500px;
-  margin: 15px;
-  float: left;
-}
-
+/* app containers */
 .app-container {
   display: flex;
   flex-direction: column;
@@ -53,13 +40,42 @@ body {
   right: 0;
 }
 
+/* main toolbar */
 .app-is-mobile .app-toolbar {
   position: fixed;
   z-index: 2;
 }
 
-h1.app-app-name {
-  margin-left: 8px;
+.app-toolbar.mat-toolbar.mat-primary {
+  color: $toolbar-link-color;
+}
+
+.app-toolbar-spacer {
+  flex: 1 1 auto;
+}
+
+.app-toolbar-icon {
+  padding: 0px;
+}
+
+.app-toolbar-brand.mat-icon-button {
+  font-size: 1.2em;
+  width: 100px;
+}
+
+h1.app-name {
+  margin-left: 2px;
+  display: inline;
+}
+
+/*side nav */
+
+.app-sidenav.mat-drawer {
+  background: $nav-background;
+  width: 150px;
+}
+.app-sidenav.mat-nav-list .mat-list-item {
+  color: $nav-link-color;
 }
 
 .app-sidenav-container {
@@ -68,4 +84,12 @@ h1.app-app-name {
 
 .app-is-mobile .app-sidenav-container {
   flex: 1 0 auto;
+}
+
+/* components */
+.dashboard-chart-card {
+  width: 500px;
+  height: 500px;
+  margin: 15px;
+  float: left;
 }
