--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,15 +1,17 @@
 <div class="app-container" [class.app-is-mobile]="mobileQuery.matches" (window:resize)="onResize($event)">
 
   <!-- app toolbar -->
-  <mat-toolbar color="primary" class="mat-elevation-z4 app-toolbar" >
+  <mat-toolbar color="primary" class="mat-elevation-z2 app-toolbar">
     <a mat-icon-button [routerLink] = "['/dashboard']" class="app-toolbar-brand">
       <mat-icon class="toolbar-icon">group_work</mat-icon><h1 class="app-name">{{ title }}</h1>
     </a>
     <button class="app-toolbar-item" mat-icon-button (click)="snav.toggle()"><mat-icon>menu</mat-icon></button>
+    <!-- todo: removing profile for now. will re-introduce when profile module is developed -->
+    <!--
     <span class="app-toolbar-spacer"></span>
     <a mat-icon-button [routerLink] = "['/profile']" >
     <mat-icon class="app-toolbar toolbar-icon" matTooltip="Profile">person</mat-icon>
-  </a>
+    </a> -->
   </mat-toolbar>
 
   <!-- nav and content containers -->
@@ -19,9 +21,8 @@
     <mat-sidenav class="app-sidenav" #snav [mode]="mobileQuery.matches ? 'over' : 'side'"
                  [fixedInViewport]="mobileQuery.matches" fixedTopGap="56">
       <mat-nav-list class="app-sidenav">
-        <a mat-list-item routerLink=".">nav 1</a>
-        <a mat-list-item routerLink=".">nav 2</a>
-        <a mat-list-item routerLink=".">nav 3</a>
+        <a mat-list-item [routerLink] = "['/team-stats']">Team Stats</a>
+        <a mat-list-item [routerLink] = "['/individual-stats']">Individual Stats</a>
       </mat-nav-list>
     </mat-sidenav>
 
