--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,10 +1,7 @@
-<mat-card class="dashboard-chart-card">
-  <mat-card-header>Pie Chart Example</mat-card-header>
-  <app-pie-chart></app-pie-chart>
-</mat-card>
+<div class="content-container">
+  dashboard...
+</div>
 
-<mat-card class="dashboard-chart-card">
-  <app-bar-chart></app-bar-chart>
-</mat-card>
+
 
 
