--- a/src/styles.css
+++ b/src/styles.css
@@ -1327,9 +1327,11 @@ body {
   right: 0; }
 
 /* main toolbar */
-.app-is-mobile .app-toolbar {
-  position: fixed;
+.app-toolbar {
   z-index: 2; }
+
+.app-is-mobile .app-toolbar {
+  position: fixed; }
 
 .app-toolbar.mat-toolbar.mat-primary {
   color: #333333; }
@@ -1354,7 +1356,8 @@ h1.app-name {
   width: 150px; }
 
 .app-sidenav.mat-nav-list .mat-list-item {
-  color: #dddddd; }
+  color: #dddddd;
+  font-size: .9em; }
 
 .app-sidenav-container {
   flex: 1; }
@@ -1368,5 +1371,9 @@ h1.app-name {
   height: 500px;
   margin: 15px;
   float: left; }
+
+/* router outlet content area */
+.content-container {
+  margin: 10px; }
 
 /*# sourceMappingURL=styles.css.map */
