set up components and service for teams. began structure for players and games.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -21,7 +21,7 @@
     <mat-sidenav class="app-sidenav" #snav [mode]="mobileQuery.matches ? 'over' : 'side'"
                  [fixedInViewport]="mobileQuery.matches" fixedTopGap="56">
       <mat-nav-list class="app-sidenav">
-        <a mat-list-item [routerLink] = "['/team-stats']">Team Stats</a>
+        <a mat-list-item [routerLink] = "['/teams']">Teams</a>
         <a mat-list-item [routerLink] = "['/individual-stats']">Individual Stats</a>
       </mat-nav-list>
     </mat-sidenav>
