refactored teams view for master detail. simplied data service for now.

--- a/src/app/teams/team-detail.component.html
+++ b/src/app/teams/team-detail.component.html
@@ -1,6 +1,6 @@
-<div class="content-container">
-  <div *ngIf="team">
-    <h2>{{ team.name }} Stats</h2>
-    <div><span>id: </span>{{team.id}} {{team.name}}</div>
-  </div>
+<div *ngIf="currentTeam">
+  <h3 class="app-team-list">{{currentTeam?.name}} Stats</h3>
 </div>
+
+
+
