--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -21,14 +21,15 @@
     <mat-sidenav class="app-sidenav" #snav [mode]="mobileQuery.matches ? 'over' : 'side'"
                  [fixedInViewport]="mobileQuery.matches" fixedTopGap="56">
       <mat-nav-list class="app-sidenav">
-        <a mat-list-item [routerLink] = "['/teams']">Teams</a>
-        <a mat-list-item [routerLink] = "['/individual-stats']">Individual Stats</a>
+        <a mat-list-item [routerLink] = "['/teams', { outlets: {'list': ['teams-list'], 'detail': ['none']}} ]">Teams</a>
       </mat-nav-list>
     </mat-sidenav>
 
     <!-- main content wrapper -->
     <mat-sidenav-content>
-      <router-outlet></router-outlet>
+      <div class="content-container">
+        <router-outlet></router-outlet>
+      </div>
     </mat-sidenav-content>
 
   </mat-sidenav-container>
