--- a/src/app/teams/team-list.component.css
+++ b/src/app/teams/team-list.component.css
@@ -1,13 +1,12 @@
-h2.app-team-list {
-  font-size: 1.1em;
+h2.app-team-list-header {
+  font-size: 1.3em;
   -webkit-margin-before: 0;
-  -webkit-margin-after: 0; }
+  -webkit-margin-after: 0;
+  margin-bottom: 10px; }
 
 .app-team-list {
   cursor: pointer;
-  height: auto; }
-
-.app-team-list.mat-grid-tile {
-  background: #dfdfdf; }
+  height: auto;
+  color: #1565C0; }
 
 /*# sourceMappingURL=team-list.component.css.map */
