--- a/src/app/teams/team-list.component.scss
+++ b/src/app/teams/team-list.component.scss
@@ -1,16 +1,19 @@
 $team-grid-background: #dfdfdf;
+$team-list-link: #1565C0;
 
-h2.app-team-list {
-  font-size: 1.1em;
+h2.app-team-list-header {
+  font-size: 1.3em;
   -webkit-margin-before: 0;
   -webkit-margin-after: 0;
+  margin-bottom: 10px;
 }
 
 .app-team-list {
   cursor:pointer;
   height: auto;
+  color: $team-list-link;
 }
 
 .app-team-list.mat-grid-tile {
-  background: $team-grid-background;
+
 }
