cleaned up player component and fixed tests. list pages tests broken with router testing issue

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -21,7 +21,9 @@
     <mat-sidenav class="app-sidenav" #snav [mode]="mobileQuery.matches ? 'over' : 'side'"
                  [fixedInViewport]="mobileQuery.matches" fixedTopGap="56">
       <mat-nav-list class="app-sidenav">
-        <a mat-list-item [routerLink] = "['/teams', { outlets: {'list': ['teams-list'], 'detail': ['none']}} ]">Teams</a>
+        <a mat-list-item [routerLink] = "['/teams', { outlets: {'list': ['team-list'], 'detail': ['none']}} ]">Teams</a>
+        <a mat-list-item [routerLink] = "['/players', { outlets: {'list': ['player-list'], 'detail': ['none']}} ]">Players</a>
+        <!--<a mat-list-item [routerLink] = "['/games', { outlets: {'list': ['game-list'], 'detail': ['none']}} ]">Games</a> -->
       </mat-nav-list>
     </mat-sidenav>
 
