--- a/src/app/players/players.component.html
+++ b/src/app/players/players.component.html
@@ -1,10 +1,8 @@
-<div class="content-container">
-  <h2>Teams</h2>
-  <ul class="players">
-    <li *ngFor="let player of players">
-      <a routerLink="./detail/{{player.id}}">
-        {{player.id}} {{player.name}}
-      </a>
-    </li>
-  </ul>
+<div class="columns">
+  <mat-card>
+    <router-outlet name="list"></router-outlet>
+  </mat-card>
+  <mat-card>
+    <router-outlet name="detail"></router-outlet>
+  </mat-card>
 </div>
