linked teams and players components. worked http back in for getting json data for players. phew.

--- a/src/app/players/player-detail.component.html
+++ b/src/app/players/player-detail.component.html
@@ -1,8 +1,8 @@
 <span  *ngIf="currentPlayer">
-  <h3 class="app-team-list">{{currentPlayer?.name}} Details</h3>
+  <h3 class="app-list-header">{{currentPlayer?.name}} Details</h3>
 
-  <mat-card class="app-team-details">
-    <mat-card-title>Team Stats</mat-card-title>
+  <mat-card class="app-list-details">
+    <mat-card-title>Player Stats</mat-card-title>
     <mat-card-content>
       <mat-list>
         <mat-list-item>Average Strikes Per Game: </mat-list-item>
