--- a/src/app/players/player-list.component.html
+++ b/src/app/players/player-list.component.html
@@ -1,19 +1,15 @@
-<h2 class="app-team-list-header">Players</h2>
+<h2 class="app-list-header">Players</h2>
 
 <div class="example-container mat-elevation-z8">
   <mat-table #table [dataSource]="dataSource" matSort>
     <!-- Rank Column -->
-    <ng-container matColumnDef="rank">
-      <mat-header-cell *matHeaderCellDef mat-sort-header> Team </mat-header-cell>
-      <mat-cell *matCellDef="let player"> {{player.team}} </mat-cell>
-    </ng-container>
 
     <!-- Name Column -->
     <ng-container matColumnDef="name">
-      <mat-header-cell *matHeaderCellDef mat-sort-header>  Name </mat-header-cell>
+      <mat-header-cell *matHeaderCellDef mat-sort-header>Name</mat-header-cell>
       <mat-cell *matCellDef="let player"
                 [ngClass]="{selected: player.id === selectedPlayer}"
-                (click)="showPlayer(player.id)" class="app-team-list">{{player.name}}</mat-cell>
+                (click)="showPlayer(player.id)" class="app-list-link">{{player.name}}</mat-cell>
     </ng-container>
 
     <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
