--- a/src/app/teams/teams.component.html
+++ b/src/app/teams/teams.component.html
@@ -1,8 +1,7 @@
-<div class="columns">
-  <mat-card>
+<div>
+  <mat-card class="mat-elevation-z1">
     <router-outlet name="list"></router-outlet>
-  </mat-card>
-  <mat-card>
+    <mat-divider></mat-divider>
     <router-outlet name="detail"></router-outlet>
   </mat-card>
 </div>
