--- a/src/app/teams/team-list.component.html
+++ b/src/app/teams/team-list.component.html
@@ -23,6 +23,12 @@
       <mat-cell *matCellDef="let team"> {{team.league}} </mat-cell>
     </ng-container>
 
+    <!-- Team Avg Column -->
+    <ng-container matColumnDef="teamAvg">
+      <mat-header-cell *matHeaderCellDef mat-sort-header>Team Average</mat-header-cell>
+      <mat-cell *matCellDef="let team"> {{team.teamAvg}} </mat-cell>
+    </ng-container>
+
     <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
     <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
   </mat-table>
