--- a/src/app/players/player-list.component.html
+++ b/src/app/players/player-list.component.html
@@ -1,4 +1,4 @@
-<h2 class="app-list-header">Players</h2>
+<h3 class="app-list-header">Player Roster</h3>
 
 <div class="mat-elevation-z8">
   <mat-table #table [dataSource]="dataSource" matSort>
