--- a/src/styles.css
+++ b/src/styles.css
@@ -1387,7 +1387,7 @@ h3.app-list-header {
   font-size: 1.2em;
   -webkit-margin-before: 0;
   -webkit-margin-after: 0;
-  margin-bottom: 10px; }
+  margin: 10px 0; }
 
 .app-list-details > mat-card-title {
   font-size: 1em; }
