--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -2,5 +2,6 @@
   width: 500px;
   height: 500px;
   margin: 15px;
-  float: left;
-}
+  float: left; }
+
+/*# sourceMappingURL=dashboard.component.css.map */
