--- a/src/app/players/player-list.component.html
+++ b/src/app/players/player-list.component.html
@@ -1,7 +1,7 @@
 <h3 class="app-list-header">Player Roster</h3>
 
-<div class="mat-elevation-z8">
-  <mat-table #table [dataSource]="dataSource" matSort>
+<div class="mat-elevation-z1">
+  <mat-table #table [dataSource]="dataSource" MatSort>
     <!-- Name Column -->
     <ng-container matColumnDef="name">
       <mat-header-cell *matHeaderCellDef mat-sort-header>Name</mat-header-cell>
@@ -25,4 +25,10 @@
     <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
     <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
   </mat-table>
+
+  <mat-paginator #paginator
+                 [pageSize]="5"
+                 [pageSizeOptions]="[5, 10, 20]">
+  </mat-paginator>
+
 </div>
