--- a/src/app/players/player-list.component.html
+++ b/src/app/players/player-list.component.html
@@ -1,7 +1,7 @@
 <h3 class="app-list-header">Player Roster</h3>
 
 <div class="mat-elevation-z1">
-  <mat-table #table [dataSource]="dataSource" MatSort>
+  <mat-table #table [dataSource]="dataSource" matSort>
     <!-- Name Column -->
     <ng-container matColumnDef="name">
       <mat-header-cell *matHeaderCellDef mat-sort-header>Name</mat-header-cell>
