--- a/src/app/teams/team-detail.component.html
+++ b/src/app/teams/team-detail.component.html
@@ -1,5 +1,5 @@
 <span  *ngIf="currentTeam">
-  <h3 class="app-list-header team-details">{{currentTeam?.name}} Details</h3>
+  <h3 class="app-list-header team-details">{{currentTeam?.name}}</h3>
       <mat-card class="team-roster">
       <app-player-list [teamId]="currentTeam?.id"></app-player-list>
       </mat-card>
@@ -7,7 +7,7 @@
       <mat-card-title>Team Stats</mat-card-title>
       <mat-card-content>
         <mat-list class="team-stats">
-          <mat-list-item>Team Rank:  {{ currentTeam?.rank }} <mat-icon class="app-stats-icon">launch</mat-icon></mat-list-item>
+          <mat-list-item>Team Rank:  {{ currentTeam?.rank }}</mat-list-item>
           <mat-list-item>Team Points Average:  {{ currentTeam?.teamAvg }}</mat-list-item>
           <mat-list-item>Handicap:  {{ currentTeam?.hdcp }}</mat-list-item>
           <mat-list-item>Points Won: {{ currentTeam?.pointsWon }} </mat-list-item>
