added hardcoded chart to dashboard. fixed most tests but ones needing stubs failing still.

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,10 +1,5 @@
 <div class="content-container">
-  dashboard...
-
+  <h2 class="app-list-header">Points Won vs. Points Lost by Team</h2>
+  <app-bar-chart></app-bar-chart>
  <!-- <mat-icon class="app-stats-icon">launch</mat-icon>-->
-
 </div>
-
-
-
-
